--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -46,6 +46,24 @@ body {
       font-size: 2rem;
       text-transform: uppercase;
       margin-bottom: 0.5rem;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+    }
+
+    h1 span {
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      margin-left: 14px;
+    }
+
+    h1 span img {
+      width: 24px;
+      height: 24px;
+      margin-right: 8px;
     }
 
     header .logo {
